<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_board"
        android:name="com.example.myapplication.ui.board.BoardFragment"
        android:label="@string/title_board"
        tools:layout="@layout/fragment_board" />

    <fragment
        android:id="@+id/navigation_safety"
        android:name="com.example.myapplication.ui.safety.SafetyFragment"
        android:label="@string/title_safety"
        tools:layout="@layout/fragment_safety" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.myapplication.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.myapplication.ui.mypage.MypageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" />
</navigation>